name:                ghc-api-compat
version:             8.6
synopsis:            Provide GHC-API compatibility with older GHC versions
-- description:
license:             BSD3
license-file:        LICENSE
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.22

library
   build-depends:
      ghc >= 8.11
   hs-source-dirs:      src
   default-language:    Haskell2010

   reexported-modules:

--        GHC.Hs.Annotation              as ApiAnnotation
        GHC.Hs.Binds                   as HsBinds
      , GHC.Hs.Decls                   as HsDecls
      , GHC.Hs.Doc                     as HsDoc
      , GHC.Hs.Dump                    as HsDumpAst
      , GHC.Hs.Expr                    as HsExpr
      , GHC.Hs.Extension               as HsExtension
      , GHC.Hs                         as HsSyn
      , GHC.Hs.ImpExp                  as HsImpExp
      , GHC.Hs.Instances               as HsInstances
      , GHC.Hs.Lit                     as HsLit
      , GHC.Hs.Pat                     as HsPat
      , GHC.Hs.Types                   as HsTypes
      , GHC.Hs.Utils                   as HsUtils
--      , GHC.Hs.Stats                   as HscStats

      , GHC.Platform.ARM64             as CodeGen.Platform.ARM64
      , GHC.Platform.ARM               as CodeGen.Platform.ARM
      , GHC.Platform.NoRegs            as CodeGen.Platform.NoRegs
      , GHC.Platform.PPC               as CodeGen.Platform.PPC
      , GHC.Platform.Regs              as CodeGen.Platform
      , GHC.Platform.SPARC             as CodeGen.Platform.SPARC
      , GHC.Platform.X86_64            as CodeGen.Platform.X86_64
      , GHC.Platform.X86               as CodeGen.Platform.X86

      , GHC.StgToCmm.ArgRep            as StgCmmArgRep
      , GHC.StgToCmm.Bind              as StgCmmBind
      , GHC.StgToCmm.CgUtils           as CgUtils
      , GHC.StgToCmm.Closure           as StgCmmClosure
      , GHC.StgToCmm.DataCon           as StgCmmCon
      , GHC.StgToCmm.Env               as StgCmmEnv
      , GHC.StgToCmm.Expr              as StgCmmExpr
      , GHC.StgToCmm.ExtCode           as StgCmmExtCode
      , GHC.StgToCmm.Foreign           as StgCmmForeign
      , GHC.StgToCmm.Heap              as StgCmmHeap
      , GHC.StgToCmm.Hpc               as StgCmmHpc
      , GHC.StgToCmm                   as StgCmm
      , GHC.StgToCmm.Layout            as StgCmmLayout
      , GHC.StgToCmm.Monad             as StgCmmMonad
      , GHC.StgToCmm.Prim              as StgCmmPrim
      , GHC.StgToCmm.Prof              as StgCmmProf
      , GHC.StgToCmm.Ticky             as StgCmmTicky
      , GHC.StgToCmm.Utils             as StgCmmUtils

      , GHC.ThToHs                     as Convert

      , GHC.Rename.Binds               as RnBinds
      , GHC.Rename.Env                 as RnEnv
      , GHC.Rename.Expr                as RnExpr
      , GHC.Rename.Fixity              as RnFixity
      , GHC.Rename.Doc                 as RnHsDoc
      , GHC.Rename.Names               as RnNames
      , GHC.Rename.Pat                 as RnPat
      , GHC.Rename.Source              as RnSource
      , GHC.Rename.Splice              as RnSplice
      , GHC.Rename.Types               as RnTypes
      , GHC.Rename.Unbound             as RnUnbound
      , GHC.Rename.Utils               as RnUtils

      , GHC.Types.RepType              as RepType

      , GHC.Cmm.BlockId                as BlockId
      , GHC.Cmm.CLabel                 as CLabel
      , GHC.Cmm.CallConv               as CmmCallConv
      , GHC.Cmm.CommonBlockElim        as CmmCommonBlockElim
      , GHC.Cmm.ContFlowOpt            as CmmContFlowOpt
      , GHC.Cmm.Expr                   as CmmExpr
      , GHC.Cmm                        as Cmm
      , GHC.Cmm.Switch                 as CmmSwitch
      , GHC.Cmm.Switch.Implement       as CmmImplementSwitchPlans
      , GHC.Cmm.Info                   as CmmInfo
      , GHC.Cmm.Info.Build             as CmmBuildInfoTables
      , GHC.Cmm.LayoutStack            as CmmLayoutStack
      , GHC.Cmm.Lint                   as CmmLint
      , GHC.Cmm.Liveness               as CmmLive
      , GHC.Cmm.MachOp                 as CmmMachOp
      , GHC.Cmm.Monad                  as CmmMonad
      , GHC.Cmm.Node                   as CmmNode
      , GHC.Cmm.Opt                    as CmmOpt
      , GHC.Cmm.Pipeline               as CmmPipeline
      , GHC.Cmm.ProcPoint              as CmmProcPoint
      , GHC.Cmm.Sink                   as CmmSink
      , GHC.Cmm.Type                   as CmmType
      , GHC.Cmm.Utils                  as CmmUtils
      , GHC.Cmm.DebugBlock             as Debug
      , GHC.Cmm.Dataflow.Block         as Hoopl.Block
      , GHC.Cmm.Dataflow.Collections   as Hoopl.Collections
      , GHC.Cmm.Dataflow               as Hoopl.Dataflow
      , GHC.Cmm.Dataflow.Graph         as Hoopl.Graph
      , GHC.Cmm.Dataflow.Label         as Hoopl.Label
      , GHC.Cmm.Graph                  as MkGraph
      , GHC.Cmm.Ppr.Decl               as PprCmmDecl
      , GHC.Cmm.Ppr.Expr               as PprCmmExpr
      , GHC.Cmm.Ppr                    as PprCmm
      , GHC.Cmm.Lexer                  as CmmLex
      , GHC.Cmm.Parser                 as CmmParse

      , GHC.CmmToC                     as PprC

      , GHC.HsToCore.PmCheck           as Check
      , GHC.HsToCore.PmCheck.Oracle    as PmOracle
      , GHC.HsToCore.PmCheck.Ppr       as PmPpr
      , GHC.HsToCore.PmCheck.Types     as PmTypes

      , GHC.HsToCore                   as Desugar
      , GHC.HsToCore.Coverage          as Coverage
      , GHC.HsToCore.Arrows            as DsArrows
      , GHC.HsToCore.Binds             as DsBinds
      , GHC.HsToCore.Foreign.Call      as DsCCall
      , GHC.HsToCore.Foreign.Decl      as DsForeign
      , GHC.HsToCore.Expr              as DsExpr
      , GHC.HsToCore.GuardedRHSs       as DsGRHSs
      , GHC.HsToCore.ListComp          as DsListComp
      , GHC.HsToCore.Quote             as DsMeta
      , GHC.HsToCore.Monad             as DsMonad
      , GHC.HsToCore.Usage             as DsUsage
      , GHC.HsToCore.Utils             as DsUtils
      , GHC.HsToCore.Docs              as ExtractDocs
      , GHC.HsToCore.Match             as Match
      , GHC.HsToCore.Match.Constructor as MatchCon
      , GHC.HsToCore.Match.Literal     as MatchLit

      , GHC.Stg.Pipeline               as SimplStg
      , GHC.Stg.CSE                    as StgCse
      , GHC.Stg.Stats                  as StgStats
      , GHC.Stg.Unarise                as UnariseStg
      , GHC.Stg.FVs                    as StgFVs
      , GHC.Stg.Lint                   as StgLint
      , GHC.Stg.Subst                  as StgSubst
      , GHC.Stg.Syntax                 as StgSyn

      , GHC.Stg.Lift                   as StgLiftLams
      , GHC.Stg.Lift.Analysis          as StgLiftLams.Analysis
      , GHC.Stg.Lift.Monad             as StgLiftLams.LiftM

      , GHC.CoreToStg                  as CoreToStg
      , GHC.CoreToStg.Prep             as CorePrep

      , GHC.Iface.Binary               as BinIface
      , GHC.Iface.Env                  as IfaceEnv
      , GHC.Iface.Syntax               as IfaceSyn
      , GHC.Iface.Type                 as IfaceType
      , GHC.Iface.Load                 as LoadIface
      , GHC.Iface.Utils                as MkIface
      , GHC.Iface.Rename               as RnModIface
      , GHC.Iface.Tidy                 as TidyPgm

      , GHC.Iface.Ext.Ast              as HieAst
      , GHC.Iface.Ext.Binary           as HieBin
      , GHC.Iface.Ext.Debug            as HieDebug
      , GHC.Iface.Ext.Types            as HieTypes
      , GHC.Iface.Ext.Utils            as HieUtils

      , GHC.IfaceToCore                as TcIface
      , GHC.CoreToIface                as ToIface

      , GHC.Data.Bitmap                as Bitmap

      , GHC.Runtime.Debugger           as Debugger
      , GHC.Runtime.Interpreter        as GHCi
      , GHC.Runtime.Linker             as Linker
      , GHC.Runtime.Linker.Types       as LinkerTypes
      , GHC.Runtime.Loader             as DynamicLoading
      , GHC.Runtime.Eval               as InteractiveEval
      , GHC.Runtime.Eval.Types         as InteractiveEvalTypes
      , GHC.Runtime.Heap.Layout        as SMRep
      , GHC.Runtime.Heap.Inspect       as RtClosureInspect

      , GHC.ByteCode.Asm               as ByteCodeAsm
      , GHC.ByteCode.Instr             as ByteCodeInstr
      , GHC.ByteCode.InfoTable         as ByteCodeItbls
      , GHC.ByteCode.Linker            as ByteCodeLink
      , GHC.ByteCode.Types             as ByteCodeTypes

      , GHC.CoreToByteCode             as ByteCodeGen

      , GHC.Llvm.MetaData              as Llvm.MetaData
      , GHC.Llvm.Ppr                   as Llvm.PpLlvm
      , GHC.Llvm.Types                 as Llvm.Types
      , GHC.Llvm.Syntax                as Llvm.AbsSyn
      , GHC.Llvm                       as Llvm
      , GHC.CmmToLlvm                  as LlvmCodeGen
      , GHC.CmmToLlvm.Mangler          as LlvmMangler
      , GHC.CmmToLlvm.Base             as LlvmCodeGen.Base
      , GHC.CmmToLlvm.CodeGen          as LlvmCodeGen.CodeGen
      , GHC.CmmToLlvm.Data             as LlvmCodeGen.Data
      , GHC.CmmToLlvm.Ppr              as LlvmCodeGen.Ppr
      , GHC.CmmToLlvm.Regs             as LlvmCodeGen.Regs
